# qt_project

./: CMakeLists.txt  IEEE754_CALCULATOR_V1_zh_CN.ts  PPI_CALCULATOR_V2.pro  PPI_CALCULATOR_V2.pro.user.4.8-pre1  PPI_CALCULATOR_V2.pro.user.87a8f4c  README.md  dialog.cpp  dialog.ui  main.cpp  mydialog.cpp  mydialog.h  mydialog.ui  mysignalslot.pro  mysignalslot.pro.user.d143d80  widget.cpp  widget.h  widget.ui
